--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </center>
     <dane row="1" max_rows="8"></dane>
         
-        <script type='text/javascript' src='http://code.jquery.com/jquery-2.1.1.min.js'></script>
+        <script type='text/javascript' src='https://code.jquery.com/jquery-2.1.1.min.js'></script>
         <script type='text/javascript' src="js/mastermind.js"></script>
 
     </body>
